2006-12-27  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Add tramp-fish.el

	* tramp-fish.el: New package.

	* tramp.el (top): Require tramp-fish.
	(tramp-inodes): New defvar.
	(tramp-handle-expand-file-name): Cache "home-directory".
	(tramp-get-inode): New defun.

	* tramp-smb.el (tramp-smb-no-stat, tramp-smb-inodes)
	(tramp-smb-get-inode): Removed.  Apply new names.

	* tramp-util.el (tramp-advice-executable-find): Add check for
	`tramp-fish-file-name-handler'.

2006-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-process-alive)
	(tramp-wait-for-regexp): Pop connection buffer in case of error.
	(tramp-exists-file-name-handler): Handle also `default-directory'.
	(tramp-half-a-year, tramp-parse-time-months): New defconst.
	Transferred from tramp-smb.el.
	(tramp-time-less-p, tramp-time-subtract): New defuns.  Transferred
	from tramp-smb.el.
	(tramp-time-diff): Use them.

	* tramp-smb.el (tramp-smb-half-a-year)
	(tramp-smb-parse-time-months, tramp-smb-time-less-p)
	(tramp-smb-time-subtract): Removed.  Apply new names.

	* tramp-util.el (top): Don't check for file name handlers of
	`start-process-shell-command' and `call-process-shell-command'.

2006-12-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): Use `wholenump' instead of
	`integerp'.  `char-equal' could fail else in case of negative
	numbers.  Reported by Toby Speight <T.M.Speight.90@cantab.net>.

2006-12-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-name-completion)
	(tramp-completion-handle-file-name-completion): PREDICATE must be
	applied on the expanded car's in `try-completion'.

2006-12-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-name-completion)
	(tramp-completion-handle-file-name-completion): Handle optional
	parameter PREDICATE.

2006-12-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Introduce new method `scpc'.  Remove